// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with invalid options matches snapshot: errors 1`] = `
Array [
  Array [
    "Error: main.27965655b499b10158f3.js from UglifyJs",
    "DefaultsError: \`invalid-option\` is not a supported option",
    "    at DefaultsError.get (eval at Object.<anonymous> (node_modules/uglify-es/tools/node.js:21:1), <anonymous>:75:23)",
    "    at UglifyJsPlugin.buildError (src/index.js:71:54)",
    "    at src/index.js:200:20",
    "    at Array.forEach (<anonymous>)",
    "    at src/index.js:192:17",
    "    at step (src/uglify/index.js:49:9)",
    "    at done (src/uglify/index.js:57:30)",
    "    at src/uglify/index.js:62:13",
    "    at _class.boundWorkers (src/uglify/index.js:35:11)",
    "    at enqueue (src/uglify/index.js:55:14)",
    "    at src/uglify/index.js:70:9",
    "    at Array.forEach (<anonymous>)",
    "    at _class.runTasks (src/uglify/index.js:53:11)",
    "    at UglifyJsPlugin.optimizeFn (src/index.js:186:14)",
    "    at Compilation.applyPluginsAsyncSeries (node_modules/tapable/lib/Tapable.js:206:13)",
    "    at applyPluginsAsync.err (node_modules/webpack/lib/Compilation.js:663:10)",
  ],
  Array [
    "Error: manifest.d6857f782c13a99b5917.js from UglifyJs",
    "DefaultsError: \`invalid-option\` is not a supported option",
    "    at DefaultsError.get (eval at Object.<anonymous> (node_modules/uglify-es/tools/node.js:21:1), <anonymous>:75:23)",
    "    at UglifyJsPlugin.buildError (src/index.js:71:54)",
    "    at src/index.js:200:20",
    "    at Array.forEach (<anonymous>)",
    "    at src/index.js:192:17",
    "    at step (src/uglify/index.js:49:9)",
    "    at done (src/uglify/index.js:57:30)",
    "    at src/uglify/index.js:62:13",
    "    at _class.boundWorkers (src/uglify/index.js:35:11)",
    "    at enqueue (src/uglify/index.js:55:14)",
    "    at src/uglify/index.js:70:9",
    "    at Array.forEach (<anonymous>)",
    "    at _class.runTasks (src/uglify/index.js:53:11)",
    "    at UglifyJsPlugin.optimizeFn (src/index.js:186:14)",
    "    at Compilation.applyPluginsAsyncSeries (node_modules/tapable/lib/Tapable.js:206:13)",
    "    at applyPluginsAsync.err (node_modules/webpack/lib/Compilation.js:663:10)",
  ],
]
`;

exports[`when applied with invalid options matches snapshot: main.27965655b499b10158f3.js 1`] = `
"webpackJsonp([0],[
/* 0 */
/***/ (function(module, exports) {

// foo
/* @preserve*/
// bar
const a = 2 + 2;
const c = 1 + 1;

module.exports = function Foo() {
  const b = 2 + 2;
  console.log(b + 1 + 2);
};


/***/ })
],[0]);"
`;

exports[`when applied with invalid options matches snapshot: manifest.d6857f782c13a99b5917.js 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// install a JSONP callback for chunk loading
/******/ 	var parentJsonpFunction = window[\\"webpackJsonp\\"];
/******/ 	window[\\"webpackJsonp\\"] = function webpackJsonpCallback(chunkIds, moreModules, executeModules) {
/******/ 		// add \\"moreModules\\" to the modules object,
/******/ 		// then flag all \\"chunkIds\\" as loaded and fire callback
/******/ 		var moduleId, chunkId, i = 0, resolves = [], result;
/******/ 		for(;i < chunkIds.length; i++) {
/******/ 			chunkId = chunkIds[i];
/******/ 			if(installedChunks[chunkId]) {
/******/ 				resolves.push(installedChunks[chunkId][0]);
/******/ 			}
/******/ 			installedChunks[chunkId] = 0;
/******/ 		}
/******/ 		for(moduleId in moreModules) {
/******/ 			if(Object.prototype.hasOwnProperty.call(moreModules, moduleId)) {
/******/ 				modules[moduleId] = moreModules[moduleId];
/******/ 			}
/******/ 		}
/******/ 		if(parentJsonpFunction) parentJsonpFunction(chunkIds, moreModules, executeModules);
/******/ 		while(resolves.length) {
/******/ 			resolves.shift()();
/******/ 		}
/******/ 		if(executeModules) {
/******/ 			for(i=0; i < executeModules.length; i++) {
/******/ 				result = __webpack_require__(__webpack_require__.s = executeModules[i]);
/******/ 			}
/******/ 		}
/******/ 		return result;
/******/ 	};
/******/
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// objects to store loaded and loading chunks
/******/ 	var installedChunks = {
/******/ 		1: 0
/******/ 	};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, {
/******/ 				configurable: false,
/******/ 				enumerable: true,
/******/ 				get: getter
/******/ 			});
/******/ 		}
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/ 	// on error function for async loading
/******/ 	__webpack_require__.oe = function(err) { console.error(err); throw err; };
/******/ })
/************************************************************************/
/******/ ([]);"
`;

exports[`when applied with invalid options matches snapshot: warnings 1`] = `Array []`;

exports[`when applied with invalid options throws validation errors 1`] = `
"UglifyJs Plugin Invalid Options

options['doesntExist'] is an invalid additional property
"
`;

exports[`when applied with invalid options throws validation errors 2`] = `
"UglifyJs Plugin Invalid Options

options.cache should be boolean
options.cache should be string
options.cache should match exactly one schema in oneOf
"
`;

exports[`when applied with invalid options throws validation errors 3`] = `
"UglifyJs Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match exactly one schema in oneOf
"
`;

exports[`when applied with invalid options throws validation errors 4`] = `
"UglifyJs Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match exactly one schema in oneOf
"
`;

exports[`when applied with invalid options throws validation errors 5`] = `
"UglifyJs Plugin Invalid Options

options.sourceMap should be boolean
"
`;

exports[`when applied with invalid options throws validation errors 6`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions should be object
"
`;

exports[`when applied with invalid options throws validation errors 7`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ie8 should be boolean
"
`;

exports[`when applied with invalid options throws validation errors 8`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be integer
"
`;

exports[`when applied with invalid options throws validation errors 9`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be integer
"
`;

exports[`when applied with invalid options throws validation errors 10`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be integer
"
`;

exports[`when applied with invalid options throws validation errors 11`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be >= 5
"
`;

exports[`when applied with invalid options throws validation errors 12`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be <= 8
"
`;
